fix: Site name now visible

--- a/css/style.css
+++ b/css/style.css
@@ -248,7 +248,7 @@ a.link-image:hover {
     align-items: center;
 }
 
-.logo-link {
+.footer-logo-text {
     color: white;
 }
 
